css/main.css
* {
//	border: 1px solid red !important;
}

* {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	-ms-box-sizing: border-box;
	box-sizing: border-box;
}

img, embed, object, video {
	max-width: 100%;
}

body {
	margin: 0;
	font-family: 'Lato', sans-serif;
}

h1 {
	font-size: 4.5vw;
	margin: 0;
	color: #D7A700;
	font-family: 'Dancing script', cursive;
}

h2 {
	font-size: 2vw;
	margin: 0;
}

h3 {
	font-size: 3vw;
	margin: 0;
	font-family: 'Dancing script', cursive;
}

h4 {
	font-size: 2vw;
}

h5 {
	font-size: 20px;
	margin-top: 5px;
	margin-bottom: 0;
}

table {
	table-layout: fixed;
}

.cartImg {
	width: 100px;
}

#header {
	background-image: url("../img/header1.jpg");
	background-repeat: no-repeat;
	background-size: contain;
	background-position: center top;
	height: 350px;
}

#footer {
	background-image: url("../img/thanks.jpg");
	background-repeat: no-repeat;
	background-size: contain;
	background-position: center bottom;
	height: 500px;
	margin-top: calc(-500px + 27vw);
}

.construction {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 2;
}

.f-blurb {
	margin-top: calc(500px - 10vw);
	background-color: rgba(0, 0, 0, .7);
}

.h-title {
	font-size: 2vw;
	font-family: 'Kaushan script', cursive;
	color: white;
	padding: 15px;
}

ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

ul::selection {
	background: none;
}

ul::-moz-selection {
	background: none;
}

li {
	display: inline;
	margin-left: 15px;
	margin-right: 15px;
	cursor: pointer;
}

li::selection {
	background: none;
}

li::-moz-selection {
	background: none;
}

li:hover {
	text-decoration: underline;
}

.s-btn:hover {
	cursor: pointer;
	text-decoration: underline;
}

.h-menu {
	text-align: right;
	font-size: 20px;
	color: white;
	padding: 15px;
}

.f-menu {
	padding-top: 6vw;
	padding-right: 25px;
}

.f-copyright {
	padding-top: 6vw;
	padding-left: 25px;
	color: white;
	font-size: 20px;
}

.c {
	text-align: center;
}

#mission {
	margin-top: calc(-350px + 25vw);
}

.m-title-g {
	font-size: 5vw;
}

.m-title-b {
	font-size: 4vw;
}

.m-blurb {
	margin-right: 20%;
	margin-left: 20%;
	font-size: 1.8vw;
}

.m-image {
	padding-left: 5%;
	padding-right: 8%;
}

.dash {
	font-family: 'Kaushan script', cursive;
	font-size: 4vw;
	margin-bottom: -3vw;
}

.title {
	color: white;
	text-align: center;
	margin-top: 4vw;
	margin-bottom: 3px;
	padding-top: .5vw;
	background-color: rgba(0, 0, 0, .7);
}

.link {
	text-decoration: underline;
	font-size: 1.5vw;
	font-weight: bold;
}

.bg-resp {
	max-width: 1689px;
	max-height: 20.72vw;
	margin-left: auto;
	margin-right: auto;
	background-image: linear-gradient(top, black, black 50%, transparent 50%, transparent 100%);
}

.collection {
	margin-top: 5vw;
	margin-bottom: 5vw;
}

.c-image {

}

.c-menu {
	margin-top: -5vw;
}

.c-m-div {
	position: relative;
	padding-top: 50px;
	padding-bottom: 30px;
	margin-left: 4.165%;
	margin-right: 4.165%;
	cursor: pointer;
}

.c-m-item {
	display: block;
	margin: auto;
}

.b-bot {
	position: relative;
}

.b-bot:after {
	content: '';
	width: 40%;
	left: 30%;
	height: 5px;
	background: #D7A700;
	position: absolute;
	bottom: -4px;
}


.b-right {
	position: absolute;
	top: 110px;
	width: 118%;
	height: 280px;
	border-right: 5px solid #D7A700;
	z-index: -1;
}

.modal-content {
	text-align: left;
	color: black;
}

.mod-l-img {
	margin: auto;
}

.mod-l-text {
	padding-left: 30px;
	padding-right: 10px;
	height: 27vw;
	margin: auto;
}

.mod-l-top {
	height: 85%;
}

.mod-l-bot {
	height: 15%;
}

.mod-blurb {
	text-indent: 30px;
}

.mod-btn {
	padding-left: 5px;
}

.mod-gallery {
	width: calc(33.33% - 15px);
	margin-left: 15px;
	height: 28.99vw;
	border: 2px solid black;
	border-radius: 25px;
}

.mod-gallery-in {
	width: calc(100% - 10px);
	height: calc(28.99vw - 18px);
	border-radius: 25px;
	margin-top: 7px;
	padding-left: 10px;
	padding-top: 3px;
	overflow-y: scroll;
}

.mod-gallery-img {
	width: 45%;
	margin-right: 10px;
	margin-bottom: 10px;
	cursor: pointer;
}

.mgi-bord {
    box-shadow:0px 12px 20px 2px #333;
    width: 46%;
}

.mod-list-btn {
	top: 12px;
	right: 30px;
	margin-left: 20px;
}

.green {
	color: green;
}

.rbord {
	border: 2px solid black;
	border-radius: 25px;
	padding: 10px;
}

.flex {
	display: flex;
	flex-wrap: wrap;
}

.dcont {
	width: 100%;
	display: flex;
	flex-wrap: wrap;
}

.mod-l-cont {
	width: 66.66%;
}

.col-1 {
	width: 8.33%;
}

.col-2 {
	width: 16.66%;
}

.col-3 {
	width: 25%;
}

.col-4 {
	width: 33.33%;
}

.col-5 {
	width: 41.66%;
}

.col-6 {
	width: 50%;
}

.col-7 {
	width: 58.33%;
}

.col-8 {
	width: 66.66%;
}

.col-9 {
	width: 75%;
}

.col-10 {
	width: 83.33%;
}

.col-11 {
	width: 91.66%;
}

.col-12 {
	width: 100%;
}

.mobile {
	display: none;
}

.mobile-menu {
	display: none;
}

@media screen and (max-width: 1217px) {
	.b-right {
		display: none;
	}
}

@media (max-width: 1150px) {
	.mod-l-text {
		height: 31vw;
	}

	.mod-gallery {
		height: 33.35vw;
	}

	.mod-gallery-in {
		height: calc(33.35vw - 18px);
	}
}

@media screen and (max-width: 600px) {

	#mission {
		margin-top: calc(-350px + 15vw);
	}

	body.modal-open {
		overflow: hidden;
		//position: fixed;
		//this position value works for IE, but makes chrome browser scroll to top of page when clicking modal
	}

	.mobile {
		display: block;
	}

	.mobile-blurb {
		width: 100%;
	}

	.c-m-div {
		width: 100%;
	}

	.b-bot:after {
		display: none;
	}

	h3 {
		font-size: 40px;
	}

	.h-title {
		display: none;
	}

	.h-menu {
		font-size: 16px;
		width: 100%;
		padding: 10px;
		padding-bottom: 0;
	}

	.title {
		margin-bottom: 0;
	}

	#header {

	}

	.modal-content {
		//height: 97vh;
		overflow: hidden;
	}

	.modal-body {
		//height: 70vh;
	}

	.mod-gallery {
		display: none;
	}

	.mod-l-cont {
		width: 100%;
		display: block;
	}

	.mod-l-top {
		height: auto;
	}

	.mod-l-bot {
		height: auto;
	}

	.mod-l-img {
		width: 70%;
		margin-top: 0;
		margin-bottom: 0;
		vertical-align: middle;
		height: 50%;
	}

	.mod-l-img img {
		display: block;
	}

	.mod-l-text {
		width: 100%;
		margin: 0;
		height: 30vh;
		padding-left: 10px;
	}

	h4 {
		font-size: 20px;
	}

	h3.modal-title {
		font-size: 8vw;
	}

	.rbord {
		border: none;
		padding: 0;
	}

	.btn {
		width: 100%;
	}

	.wish-btn {
		margin-bottom: 5px;
		margin-top: 10px;
	}

	.cart-btn {
		margin-top: 5px;
	}

	.mob-btn {
		position: absolute;
		top: 22%;
		font-size: 30px;
		background-color: gray;
		border-radius: 10px;
		padding: 5px;
		padding-top: 9px;
		padding-bottom: 10px;
		transform: translate3d(0, 0, 0);
		transition: .5s ease-in-out all;
	}

	.m-b-l {
		//margin-left: -40px;
	}

	.m-b-r {
		//margin-left: 20px;
		margin-left: 280px;
	}

	.modal-body {
		flex-wrap: nowrap;
		//width: 500px;
		transform: translate3d(0, 0, 0);
		transition: .5s ease-in-out all;
	}

	.mob-btn, .modal-body {
		-webkit-backface-visibility: hidden;
		-webkit-perspective: 1000;
		backface-visibility: hidden;
		perspective: 1000;
	}

	.mod-l-cont.ng-hide-add,
	.mod-l-cont.ng-hide-remove {
		//transition: 0s linear all;
	}

	.mod-l-cont.ng-hide-add-active,
	.mod-l-cont.ng-hide-remove-active {
		//transition: .5s ease-in-out all;
		//transition-delay: .5s;
	}

	.mod-l-cont.ng-hide-add-active {

	}

	.mod-l-cont.ng-hide {
		//transform: translate(300px, 300px);
		//opacity: 0;
	}

	.dsktp {
		display: none;
	}

	.position {
		right: 0;
		transition: 1s right;
	}

	.rbord {
		padding-left: 15px;
		padding-right: 15px;
	}

	.m-title-g {
		font-size: 15vw;
	}

	.m-title-b {
		font-size: 10vw;
	}

	.dash {
		font-size: 30px;
	}

	.m-blurb {
		margin-right: 10%;
		margin-left: 10%;
		font-size: 18px;
	}

	.link {
		font-size: 20px;
	}

	#header {
		height: 500px;
	}

	h1 {
		//font-size: 18vw;
		font-size: 70px;
	}

	h2 {
		//font-size: 5vw;
		font-size: 18px;
	}

	#header {
		background-image: url("../img/header1_mobile.jpg");
	}

	#footer {
		background-image: url("../img/thanks_mobile.jpg");
	}

	.f-blurb {
		margin-top: calc(500px - 19vw);
	}

	.f-copyright {
		width: 100%;
		padding-top: 10px;
		padding-left: 10px;
		font-size: 18px;
	}

	.f-menu {
		padding-top: 0;
	}

	.m-image {
		width: 100%;
		margin-top: 14vw;
		margin-bottom: 14vw;
		padding-left: 8%;
	}

}

@media screen and (max-width: 375px) {
	.h-menu ul {
		display: none;
	}

	.f-menu ul {
		display: inherit;
	}

	.mobile-menu {
		display: inherit;
	}

}

